<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alvin.example.com.tabtracker.Settlement"
    android:background="#598cbc">

    <Button
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/submit_button"
        android:id="@+id/submitButton2"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settle_balance"
        android:id="@+id/settleText"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount_text"
        android:id="@+id/nameText"
        android:layout_marginTop="111dp"
        android:textColor="#ffffff"
        android:textSize="35dp"
        android:layout_below="@+id/settleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/amountInput"
        android:gravity="center_vertical|center_horizontal|right"
        android:textSize="35dp"
        android:singleLine="true"
        android:background="#ffffff"
        android:paddingRight="10dp"
        android:layout_alignBottom="@+id/nameText"
        android:layout_toRightOf="@+id/nameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dollar_sign"
        android:id="@+id/dollaSign"
        android:textSize="35dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:background="#ffffff"
        android:layout_alignTop="@+id/amountInput"
        android:layout_alignLeft="@+id/amountInput"
        android:layout_alignStart="@+id/amountInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/memo_text"
        android:id="@+id/memoText"
        android:textColor="#ffffff"
        android:textSize="35dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/memoInput"
        android:gravity="center_vertical|right"
        android:textSize="35dp"
        android:singleLine="true"
        android:background="#ffffff"
        android:paddingRight="10dp"
        android:layout_toRightOf="@+id/memoText"
        android:layout_alignBottom="@+id/memoText"
        android:layout_alignRight="@+id/amountInput"
        android:layout_alignEnd="@+id/amountInput" />

</RelativeLayout>
