<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alvin.example.com.tabtracker.Details"
    android:background="#598cbc">

    <Button
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:text="@string/settle_button"
        android:id="@+id/settleButton"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:onClick="newTransaction"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Name"
        android:id="@+id/usernameText"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="70dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balance_text"
        android:id="@+id/balanceText"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:paddingTop="50dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$0.00"
        android:id="@+id/amountText"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:paddingTop="50dp"
        android:layout_alignTop="@+id/balanceText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/history_text"
        android:id="@+id/historyText"
        android:textColor="#ffffff"
        android:textSize="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/balanceText"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/historyText"
        android:layout_alignLeft="@+id/historyText"
        android:layout_alignStart="@+id/historyText"
        android:layout_above="@+id/settleButton">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView3"
            android:layout_gravity="center"
            android:paddingBottom="16dp"
            android:fillViewport="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:id="@+id/feedLayout" >

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</RelativeLayout>
